@@ -13,9 +13,10 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -34,6 +35,7 @@ import team.themoment.hellogsmv3.domain.oneseo.entity.type.ScreeningCategory;
 import team.themoment.hellogsmv3.domain.oneseo.entity.type.YesNo;
 import team.themoment.hellogsmv3.domain.oneseo.repository.OneseoRepository;
 
+@ExtendWith(MockitoExtension.class)
 @DisplayName("SearchOneseoService 클래스의")
 class SearchOneseoServiceTest {
 
@@ -43,13 +45,8 @@ class SearchOneseoServiceTest {
     @InjectMocks
     private SearchOneseoService searchOneseoService;
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
-
     @Nested
-    @DisplayName("execute 메소드는")
+    @DisplayName("execute 메서드는")
     class Describe_execute {
 
         private final int page = 0;
@@ -130,7 +127,7 @@ class SearchOneseoServiceTest {
                 assertEquals(1, searchOneseoPageInfoDto.totalElements());
                 assertEquals(1, searchOneseoPageInfoDto.totalPages());
 
-                SearchOneseoResDto searchOneseoResDto = result.oneseos().get(0);
+                SearchOneseoResDto searchOneseoResDto = result.oneseos().getFirst();
                 assertEquals(member.getId(), searchOneseoResDto.memberId());
                 assertEquals(oneseo.getOneseoSubmitCode(), searchOneseoResDto.submitCode());
                 assertEquals(oneseo.getRealOneseoArrivedYn(), searchOneseoResDto.realOneseoArrivedYn());
@@ -155,16 +152,14 @@ class SearchOneseoServiceTest {
 
             private Member member;
             private Oneseo oneseo;
-            private OneseoPrivacyDetail oneseoPrivacyDetail;
-            private EntranceTestResult entranceTestResult;
 
             @BeforeEach
             void setUp() {
                 Pageable pageable = PageRequest.of(page, size);
                 member = buildMember();
                 oneseo = buildOneseo();
-                oneseoPrivacyDetail = buildOneseoPrivacyDetail();
-                entranceTestResult = buildEntranceTestResult();
+                OneseoPrivacyDetail oneseoPrivacyDetail = buildOneseoPrivacyDetail();
+                EntranceTestResult entranceTestResult = buildEntranceTestResult();
 
                 SearchOneseoResDto searchOneseoResDto = buildSearchOneseoDto(member,
                         oneseo,
@@ -193,8 +188,8 @@ class SearchOneseoServiceTest {
 
                 assertEquals(1, result.info().totalElements());
                 assertEquals(1, result.oneseos().size());
-                assertEquals(member.getId(), result.oneseos().get(0).memberId());
-                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().get(0).submitCode());
+                assertEquals(member.getId(), result.oneseos().getFirst().memberId());
+                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().getFirst().submitCode());
             }
         }
 
@@ -204,16 +199,14 @@ class SearchOneseoServiceTest {
 
             private Member member;
             private Oneseo oneseo;
-            private OneseoPrivacyDetail oneseoPrivacyDetail;
-            private EntranceTestResult entranceTestResult;
 
             @BeforeEach
             void setUp() {
                 Pageable pageable = PageRequest.of(page, size);
                 member = buildMember();
                 oneseo = buildOneseo();
-                oneseoPrivacyDetail = buildOneseoPrivacyDetail();
-                entranceTestResult = buildEntranceTestResult();
+                OneseoPrivacyDetail oneseoPrivacyDetail = buildOneseoPrivacyDetail();
+                EntranceTestResult entranceTestResult = buildEntranceTestResult();
 
                 SearchOneseoResDto searchOneseoResDto = buildSearchOneseoDto(member,
                         oneseo,
@@ -242,8 +235,8 @@ class SearchOneseoServiceTest {
 
                 assertEquals(1, result.info().totalElements());
                 assertEquals(1, result.oneseos().size());
-                assertEquals(member.getId(), result.oneseos().get(0).memberId());
-                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().get(0).submitCode());
+                assertEquals(member.getId(), result.oneseos().getFirst().memberId());
+                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().getFirst().submitCode());
             }
         }
 
@@ -253,16 +246,14 @@ class SearchOneseoServiceTest {
 
             private Member member;
             private Oneseo oneseo;
-            private OneseoPrivacyDetail oneseoPrivacyDetail;
-            private EntranceTestResult entranceTestResult;
 
             @BeforeEach
             void setUp() {
                 Pageable pageable = PageRequest.of(page, size);
                 member = buildMember();
                 oneseo = buildOneseo();
-                oneseoPrivacyDetail = buildOneseoPrivacyDetail();
-                entranceTestResult = buildEntranceTestResult();
+                OneseoPrivacyDetail oneseoPrivacyDetail = buildOneseoPrivacyDetail();
+                EntranceTestResult entranceTestResult = buildEntranceTestResult();
 
                 SearchOneseoResDto searchOneseoResDto = buildSearchOneseoDto(member,
                         oneseo,
@@ -291,8 +282,8 @@ class SearchOneseoServiceTest {
 
                 assertEquals(1, result.info().totalElements());
                 assertEquals(1, result.oneseos().size());
-                assertEquals(member.getId(), result.oneseos().get(0).memberId());
-                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().get(0).submitCode());
+                assertEquals(member.getId(), result.oneseos().getFirst().memberId());
+                assertEquals(oneseo.getOneseoSubmitCode(), result.oneseos().getFirst().submitCode());
             }
         }
     }
